--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "clipboard-copy": "^3.1.0",
     "core-js": "^3.4.4",
     "highlight.js": "^9.18.1",
+    "human-date": "^1.4.0",
     "jquery": "^3.4.1",
     "object-path": "^0.11.4",
     "perfect-scrollbar": "^1.5.0",
